Fixed overflow in homepage

--- a/_assets/styles/templates/_tpl-home.scss
+++ b/_assets/styles/templates/_tpl-home.scss
@@ -17,6 +17,7 @@
     text-align: center;
     z-index: 1;
     background-color: #F9FAFE;
+    overflow: hidden;
     &:before {
         content: '';
         display: block;
